infrastructure/ingress/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.robert-wiesner.de`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-redirect-to-https@kubernetescrd
        - name: traefik-basic-auth@kubernetescrd

  tls:
    secretName: traefik.robert-wiesner.de
