infrastructure/ingress/traefik-domain-root.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: domain-root
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`robert-wiesner.de`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: traefik-redirect-to-https@kubernetescrd
        - name: traefik-redirect-root@kubernetescrd
  tls:
    secretName: robert-wiesner.de
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: domain-catch-all
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      priority: 1
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: traefik-redirect-to-https@kubernetescrd
        - name: traefik-redirect-root@kubernetescrd
  tls:
    secretName: robert-wiesner.de
