infrastructure/ingress/traefik-graphql.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-reactive
  namespace: services
  labels:
    type: graphql-reactive
spec:
  selector:
    type: graphql-reactive
  ports:
    - name: http
      port: 8082
      protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: graphql-reactive
  namespace: services
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`graphql.robert-wiesner.de`)
      services:
        - name: graphql-reactive
          namespace: services
          port: 8082
      middlewares:
        - name: traefik-traefik-sso@kubernetescrd
  tls:
    secretName: graphql.robert-wiesner.de
